--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,55 @@
-  body {style="background-color: #EAF6F6"}
-
-  img {
-  height: 250px;
-  border-radius: 100%;}
-
-  hr {
-  border-style: dotted none none;
-  border-color: grey;
-  border-width: 2px;
-  width: 100%;
+  body {
+    margin: 0;
+    text-align: center;
+    font-family: 'Merriweather', serif;
   }
+
+  h1 {
+    font-size: 90px;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-family: 'Sacramento', cursive;
+  }
+
+  h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 42p;
+    }
+
+  h3 {
+    font-family: 'Montserrat', sans-serif;
+    }
+
+
+  .top {
+    background-color: #EAF6F6;
+    position: relative;
+    padding-top: 100px;
+  }
+
+  .middle {
+    margin: 100px 0 ;
+  }
+
+  .bottom {
+
+  }
+
+  .b-cloud {
+    position: absolute;
+    left: 300px;
+    bottom: 300px;
+
+  }
+
+  .t-cloud {
+    position: absolute;
+    right: 300px;
+    top: 50px;
+  }
+
+
+   .man {
+     width: 25%;
+     background-color: blue;
+   }
